2008-04-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* scripts/openbabel-python.i: Added OBForceField::SetLogToStdOut() and
	OBForceField::SetLogToStdErr() to replace SetLogFile(std::ostream
	*pos) in python.

2008-04-29  Marcus D. Hanwell  <marcus@cryos.org>

	* src/CMakeLists.txt, src/formats/CMakeLists.txt: Moved the
	obmolecformat.cpp linkage back to where it was - this works on both
	Windows and Linux and so seems the better solution.

2008-04-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Torsion constraints are working now.

2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Removed trailing
	white space.

2008-04-28  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefielduff.cpp: Added groups and Ignore.

	* src/forcefields/forcefieldghemical.cpp: Added groups and Ignore.

	* src/forcefields/forcefieldmmff94.cpp: OpenMP version of MMFF94. Does
	not affect normal compilation. Only used with GCC options "-lgomp
	-fopenmp".

	* include/openbabel/forcefield.h: Changed _ncoords from int to
	unsigned int. (Fixes some compiler warnings)

2008-04-27 Chris Morley

	* include/openbabel/mol.h, src/mol.cpp(AssignSpinMultiplicity):
	added a parameter which forces no implicit hydrogen. The default
	is false and backward compatible.
	
	* src/mol.cpp(PerceiveBondOrders): added a call to
	AssignSpinMultiplicity which should prevent molecules from
	computational chemistry formats being given implicit hydrogen.

2008-04-25  Noel O'Boyle <baoilleach@gmail.com>

	* data/mr.txt: Based on a comparison with RDKit's Crippen parameter
	text file, identified a single error in the MR value for Me1 (see
	JCICS, 1999, 39, 868) 

2008-04-21 Chris Morley

	* src/descriptors/groupcontrib.cpp(Predict): Make a copy of
	the molecule and add hydrogens before calculating property.
	As recommended by Noel in his blog.

2008-04-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>
